# Rust-AutoMouseKeyboard

./: Cargo.toml  GPL.md  README.md  copydll.ps1  setpath.ps1
src/: main.rs  mousekeyboard.rs
